--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     }
   ],
   "main": "./lib/close-tags",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Closes HTML tags in text and source code.",
-  "activationEvents": ["close-tags:close"],
+  "activationEvents": [
+    "close-tags:close"
+  ],
   "repository": "https://github.com/fauxparse/close-tags",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
