--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     }
   ],
   "main": "./lib/close-tags",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Closes HTML tags in text and source code.",
   "activationCommands": {
-    "atom-text-editor": [ "close-tags:close" ]
+    "atom-text-editor": [
+      "close-tags:close"
+    ]
   },
   "repository": "https://github.com/fauxparse/close-tags",
   "license": "MIT",
